--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^5.0|^6.0",
-        "vlucas/phpdotenv": "^3.0"
+        "vlucas/phpdotenv": "^3.0|^4.0"
     },
     "autoload": {
         "psr-4": {
