--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0"
-    },
-    "require-dev": {
+        "php": "^5.4 || ^7.0",
         "guzzlehttp/guzzle": "^5.0|^6.0",
         "vlucas/phpdotenv": "^3.0|^4.0"
     },
