--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "laravel"
     ],
     "homepage": "https://github.com/vursion/vursion",
-    "license": null,
+    "license": "MIT",
     "type": "library",
     "authors": [
         {
