--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^5.4 || ^7.0",
-        "guzzlehttp/guzzle": "^5.0|^6.0|^7.0",
-        "vlucas/phpdotenv": "^3.0|^4.0|^5.0"
+        "guzzlehttp/guzzle": "^5.0 || ^6.0 || ^7.0",
+        "vlucas/phpdotenv": "^3.0 || ^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
