--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,22 @@
         "guzzlehttp/guzzle": "^5.0 || ^6.0 || ^7.0",
         "vlucas/phpdotenv": "^3.0 || ^4.0 || ^5.0"
     },
+    "require-dev": {
+        "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0"
+    },
     "autoload": {
         "psr-4": {
             "Vursion\\Vursion\\": "src"
         }
     },
-    "scripts": null,
+    "autoload-dev": {
+        "psr-4": {
+            "Vursion\\Vursion\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "config": {
         "sort-packages": true
     },
