--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,12 +9,12 @@ on:
 jobs:
     php-tests:
         runs-on: ${{ matrix.os }}
-
         strategy:
+            fail-fast: true
             matrix:
                 php: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
                 laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
-                dependency-version: [prefer-lowest, prefer-stable]
+                stability: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest, windows-latest]
                 include:
                     - laravel: 5.4.*
@@ -34,7 +34,7 @@ jobs:
                     - laravel: 8.*
                       testbench: 6.*
 
-        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
         steps:
             - name: Checkout code
