--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
