--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
             matrix:
                 php: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
                 laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
-                stability: [prefer-lowest, prefer-stable]
+                version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest, windows-latest]
                 include:
                     - laravel: 5.4.*
@@ -33,8 +33,23 @@ jobs:
                       testbench: 5.*
                     - laravel: 8.*
                       testbench: 6.*
+                exclude:
+                    - laravel: 5.5.*
+                      php: 5.6
+                    - laravel: 5.6.*
+                      php: [5.6, 7.0]
+                    - laravel: 5.7.*
+                      php: [5.6, 7.0]
+                    - laravel: 5.8.*
+                      php: [5.6, 7.0]
+                    - laravel: 6.*
+                      php: [5.6, 7.0, 7.1]
+                    - laravel: 7.*
+                      php: [5.6, 7.0, 7.1]
+                    - laravel: 8.*
+                      php: [5.6, 7.0, 7.1, 7.2]
 
-        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.version }} - ${{ matrix.os }}
 
         steps:
             - name: Checkout code
@@ -51,7 +66,7 @@ jobs:
             - name: Install dependencies
               run: |
                 composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-                composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+                composer update --${{ matrix.version }} --prefer-dist --no-interaction
 
             - name: Execute tests
               run: vendor/bin/phpunit
