--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,6 +44,8 @@ jobs:
                       php: 5.6
                     - laravel: 5.7.*
                       php: 7.0
+                    - laravel: 5.7.*
+                      php: 8.0
                     - laravel: 5.8.*
                       php: 5.6
                     - laravel: 5.8.*
