--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -40,6 +40,8 @@ jobs:
                       php: 5.6
                     - laravel: 5.6.*
                       php: 7.0
+                    - laravel: 5.6.*
+                      php: 8.0
                     - laravel: 5.7.*
                       php: 5.6
                     - laravel: 5.7.*
@@ -50,6 +52,8 @@ jobs:
                       php: 5.6
                     - laravel: 5.8.*
                       php: 7.0
+                    - laravel: 5.8.*
+                      php: 8.0
                     - laravel: 6.*
                       php: 5.6
                     - laravel: 6.*
