--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [5.6, 7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
+                php: [7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
                 laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
                 version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
@@ -34,40 +34,26 @@ jobs:
                     - laravel: 8.*
                       testbench: 6.*
                 exclude:
-                    - laravel: 5.5.*
-                      php: 5.6
-                    - laravel: 5.6.*
-                      php: 5.6
                     - laravel: 5.6.*
                       php: 7.0
                     - laravel: 5.6.*
                       php: 8.0
                     - laravel: 5.7.*
-                      php: 5.6
-                    - laravel: 5.7.*
                       php: 7.0
                     - laravel: 5.7.*
                       php: 8.0
                     - laravel: 5.8.*
-                      php: 5.6
-                    - laravel: 5.8.*
                       php: 7.0
                     - laravel: 5.8.*
                       php: 8.0
-                    - laravel: 6.*
-                      php: 5.6
                     - laravel: 6.*
                       php: 7.0
                     - laravel: 6.*
                       php: 7.1
                     - laravel: 7.*
-                      php: 5.6
-                    - laravel: 7.*
                       php: 7.0
                     - laravel: 7.*
                       php: 7.1
-                    - laravel: 8.*
-                      php: 5.6
                     - laravel: 8.*
                       php: 7.0
                     - laravel: 8.*
@@ -75,7 +61,7 @@ jobs:
                     - laravel: 8.*
                       php: 7.2
 
-        name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.version }} - ${{ matrix.os }}
+        name: PHP ${{ matrix.php }} - LARAVEL ${{ matrix.laravel }} - ${{ matrix.version }} - ${{ matrix.os }}
 
         steps:
             - name: Checkout code
