--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -34,6 +34,10 @@ jobs:
                     - laravel: 8.*
                       testbench: 6.*
                 exclude:
+                    - laravel: 5.4.*
+                      php: 8.0
+                    - laravel: 5.5.*
+                      php: 8.0
                     - laravel: 5.6.*
                       php: 7.0
                     - laravel: 5.6.*
