--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,11 +14,11 @@ jobs:
             matrix:
                 php: [7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
                 laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
-                version: [prefer-lowest, prefer-stable]
+                version: [prefer-stable]
                 os: [ubuntu-latest]
                 include:
                     - laravel: 5.4.*
-                      testbench: 3.4.2
+                      testbench: 3.4.12
                     - laravel: 5.5.*
                       testbench: 3.5.*
                     - laravel: 5.6.*
