--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,13 +12,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.0, 7.1, 7.2, 7.3, 7.4, 8.0]
-                laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
+                php: [7.1, 7.2, 7.3, 7.4, 8.0]
+                laravel: [5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*]
                 version: [prefer-stable]
                 os: [ubuntu-latest]
                 include:
-                    - laravel: 5.4.*
-                      testbench: 3.4.12
                     - laravel: 5.5.*
                       testbench: 3.5.*
                     - laravel: 5.6.*
@@ -34,32 +32,18 @@ jobs:
                     - laravel: 8.*
                       testbench: 6.*
                 exclude:
-                    - laravel: 5.4.*
-                      php: 8.0
                     - laravel: 5.5.*
                       php: 8.0
                     - laravel: 5.6.*
-                      php: 7.0
-                    - laravel: 5.6.*
                       php: 8.0
-                    - laravel: 5.7.*
-                      php: 7.0
                     - laravel: 5.7.*
                       php: 8.0
                     - laravel: 5.8.*
-                      php: 7.0
-                    - laravel: 5.8.*
                       php: 8.0
                     - laravel: 6.*
-                      php: 7.0
-                    - laravel: 6.*
                       php: 7.1
                     - laravel: 7.*
-                      php: 7.0
-                    - laravel: 7.*
                       php: 7.1
-                    - laravel: 8.*
-                      php: 7.0
                     - laravel: 8.*
                       php: 7.1
                     - laravel: 8.*
