--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0 || ^8.0",
+        "php": "^5.4 || ^7.0 || ^8.0 || ^8.1",
         "guzzlehttp/guzzle": "^5.0 || ^6.0 || ^7.0",
         "vlucas/phpdotenv": "^2.0 || ^3.0 || ^4.0 || ^5.0"
     },
