--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0 || ^8.0 || ^8.1",
+        "php": "^5.4 || ^7.0 || ^7.1 || ^7.2 || ^7.3 || ^7.4 || ^8.0 || ^8.1",
         "guzzlehttp/guzzle": "^5.0 || ^6.0 || ^7.0",
         "vlucas/phpdotenv": "^2.0 || ^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0",
+        "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0"
     },
     "autoload": {
