Change email address

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Jochen Sengier",
-            "email": "support@vursion.io",
+            "email": "jochen@celcius.be",
             "role": "Developer"
         }
     ],
