--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
             fail-fast: false
             matrix:
                 php: [7.1, 7.2, 7.3, 7.4, 8.0, 8.1, 8.2, 8.3]
-                laravel: [5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*, 9.*, 10.*]
+                laravel: [5.5.*, 5.6.*, 5.7.*, 5.8.*, 6.*, 7.*, 8.*, 9.*, 10.*, 11.*]
                 version: [prefer-stable]
                 os: [ubuntu-latest]
                 include:
@@ -35,6 +35,8 @@ jobs:
                       testbench: 7.*
                     - laravel: 10.*
                       testbench: 8.*
+                    - laravel: 11.*
+                      testbench: 9.*
                 exclude:
                     - laravel: 5.5.*
                       php: 8.0
@@ -106,6 +108,18 @@ jobs:
                       php: 7.4
                     - laravel: 10.*
                       php: 8.0
+                    - laravel: 11.*
+                      php: 7.1
+                    - laravel: 11.*
+                      php: 7.2
+                    - laravel: 11.*
+                      php: 7.3
+                    - laravel: 11.*
+                      php: 7.4
+                    - laravel: 11.*
+                      php: 8.0
+                    - laravel: 11.*
+                      php: 8.1
 
         name: PHP ${{ matrix.php }} - LARAVEL ${{ matrix.laravel }} - ${{ matrix.version }} - ${{ matrix.os }}
 
