--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "vlucas/phpdotenv": "^2.0 || ^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
+        "orchestra/testbench": "^3.0 || ^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
         "phpunit/phpunit": "^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0"
     },
     "autoload": {
